cmake_minimum_required(VERSION 3.4)
project(pybind_signals)
add_subdirectory(extern/pybind11)
add_subdirectory(extern/matplotplusplus)
pybind11_add_module(siganalysis siganalysis.cpp)
target_link_libraries(siganalysis PUBLIC matplot)
set_property(TARGET matplot PROPERTY POSITION_INDEPENDENT_CODE ON)
